# zadanie_rekrutacyjne

./: CMakeLists.txt  README.md  main.out  rozmowa.c
src/: CMakeLists.txt  analyzer.c  analyzer.h  logger.c  logger.h  main.c  main.h  printer.c  printer.h  queue.c  queue.h  reader.c  reader.h  watchdog.c  watchdog.h
tests/: CMakeLists.txt  queue_test.c  reader_test.c
